--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -14,7 +14,7 @@ import type { IShopAddressMap, IShoppingBagSidebarProp } from '@misc';
 import LoadingOverlay from './loading-overlay.astro';
 import ErrorMsgModal from './error-msg-modal.astro';
 import CollectionPointOnQtyIncrease from './collection-point-on-qty-increase.astro'
-import { PUBLIC_FM_COMPANY_NAME_SHORT, PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX, FM_IS_ONLINE, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
+import { PUBLIC_FM_COMPANY_NAME_SHORT, PUBLIC_FM_COMPANY_NAME_FULL, PUBLIC_FM_PUBLIC_IMAGE_URL_PREFIX, FM_IS_ONLINE, PUBLIC_FM_ACCEPT_MEMBERSHIP } from 'astro:env/client'
 import type { IProductImages } from '@components/catalogue-item/interfaces';
 
 interface Props {
@@ -78,13 +78,28 @@ if (!!shoppingBagProp){
   if (!!cartItemMap) cartHasItems = !!Object.values(cartItemMap).map(e=>e.quantity).filter(e=>!!e).length
 } else cartHasItems = hasItemsInCart
 
-const fullTitle = !!title ? `${titleAddForHer ? `${title.trim()} for Her` : title.trim()} | ${PUBLIC_FM_COMPANY_NAME_SHORT}` : `${PUBLIC_FM_COMPANY_NAME_SHORT} | Affordable Fashion Jewellery UK | Buy 3 For £20`
+const fullTitle = !!title ? `${(titleAddForHer && title.trim().length < 50) ? `${title.trim()} for Her` : title.trim()} | ${PUBLIC_FM_COMPANY_NAME_SHORT}` : `${PUBLIC_FM_COMPANY_NAME_SHORT} | Affordable Fashion Jewellery UK | Buy 3 For £20`
 
 const href = Astro.url.href.replaceAll('http://','https://')
 
 const origin = Astro.url.origin.replaceAll('http://','https://')
 
-const productSchema = isProductPage ? {
+const organizationalSchema = {
+  "@type": "OnlineStore",
+  "name": PUBLIC_FM_COMPANY_NAME_SHORT,
+  "legalName":PUBLIC_FM_COMPANY_NAME_FULL,
+  "url": origin,
+  "logo": `${origin}/logo.jpg`,
+  "description":"Based in Edinburgh, we offer beautiful, distinctive fashion jewellery at affordable prices.",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "contactType": "Customer Service",
+    "url": `${origin}/contact`, 
+    "availableLanguage": ["English"]
+  }
+}
+
+const schema = isProductPage ? {
   "@context": "https://schema.org",
   "@graph":[
     {
@@ -129,9 +144,13 @@ const productSchema = isProductPage ? {
           "item": href
         }
       ]
-    }
+    },
+    organizationalSchema
   ]
-} : {}
+} : {
+  "@context": "https://schema.org",
+  ...organizationalSchema
+}
 
 const fontCss = `
     @font-face {
@@ -247,10 +266,10 @@ const fontCss = `
     <meta property={`${e}:title`} content={fullTitle} />
   ))}
 
-  <meta name="og:type" content={isProductPage ? 'product' : 'website'} />
-  <meta name="og:url" content={href} />
-  <meta name="og:site_name" content={PUBLIC_FM_COMPANY_NAME_SHORT} />
-  <meta name="og:brand" content={PUBLIC_FM_COMPANY_NAME_SHORT} />
+  <meta property="og:type" content={isProductPage ? 'product' : 'website'} />
+  <meta property="og:url" content={href} />
+  <meta property="og:site_name" content={PUBLIC_FM_COMPANY_NAME_SHORT} />
+  <meta property="og:brand" content={PUBLIC_FM_COMPANY_NAME_SHORT} />
   {isProductPage && <>
     <meta property="og:availability" content={inStock ? "instock" : "out of stock"} />
     <meta property="product:gender" content="female" />
@@ -271,7 +290,7 @@ const fontCss = `
     <meta property="og:image" content={imageURL} />
   </>}
 
-  {isProductPage && <script type="application/ld+json" set:html={JSON.stringify(productSchema)} />}
+  <script type="application/ld+json" set:html={JSON.stringify(schema)} />
 
   <meta name="theme-color" content="#ffffff">
 
