--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -68,6 +68,7 @@ const {
 } = Astro.props
 const isCheckoutPage = Astro.url.pathname === '/checkout'
 const isContactPage = Astro.url.pathname === '/contact'
+const isHomePage = Astro.url.pathname === '/'
 // const isTrackOrderPage = Astro.url.pathname === '/track-order'
 
 const shopNameMap = Object.values(shopAddressMap).map(e=>({[e.id]:e.name})).reduce((a,b)=>({...a,...b}),{})
@@ -85,6 +86,7 @@ const href = Astro.url.href.replaceAll('http://','https://')
 const origin = Astro.url.origin.replaceAll('http://','https://')
 
 const organizationalSchema = {
+  "@context": "https://schema.org",
   "@type": "OnlineStore",
   "name": PUBLIC_FM_COMPANY_NAME_SHORT,
   "legalName":PUBLIC_FM_COMPANY_NAME_FULL,
@@ -99,7 +101,7 @@ const organizationalSchema = {
   }
 }
 
-const schema = isProductPage ? {
+const productSchema = isProductPage ? {
   "@context": "https://schema.org",
   "@graph":[
     {
@@ -144,13 +146,9 @@ const schema = isProductPage ? {
           "item": href
         }
       ]
-    },
-    organizationalSchema
+    }
   ]
-} : {
-  "@context": "https://schema.org",
-  ...organizationalSchema
-}
+} : {}
 
 const fontCss = `
     @font-face {
@@ -290,7 +288,8 @@ const fontCss = `
     <meta property="og:image" content={imageURL} />
   </>}
 
-  <script type="application/ld+json" set:html={JSON.stringify(schema)} />
+  {isProductPage && <script type="application/ld+json" set:html={JSON.stringify(productSchema)} />}
+  {isHomePage && <script type="application/ld+json" set:html={JSON.stringify(organizationalSchema)} />}
 
   <meta name="theme-color" content="#ffffff">
 
