--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -56,6 +56,7 @@ Astro.cookies.set("csrf_token",resp.headers.get("X-CSRF-TOKEN"),sessionCookieOpt
     firstName,
     title:'About Us',
     headerCarouselTexts,
+    description:'Meet the Edinburgh couple bringing affordable, quality fashion jewellery to the UK. Hand-picked designs with fast local shipping. Family business with heart.'
 }}>
     <About {...{text}} />
 </Layout>
