--- a/src/components/catalogue-item/index.astro
+++ b/src/components/catalogue-item/index.astro
@@ -19,7 +19,9 @@ const { id, productPageRelatedProduct = false, productDetails, productCartDetail
 const {
     url,
     images,
-    stockQuantities
+    stockQuantities,
+    name,
+    discountedPrice
 } = productDetails
 
 const imageLen = images.filter(e=>e.catalogue).length
@@ -34,6 +36,8 @@ const imageLen = images.filter(e=>e.catalogue).length
     data-qty-in-cart={productCartDetails?.quantity || 0}
     data-stock-quantities={JSON.stringify(stockQuantities)}
     class={`${!!group ? "relative hidden" : "relative"}${productPageRelatedProduct ? ' related-product' : ''}${homepageBestseller ? ' homepage-bestseller' : ''}`.trim()}
+    data-name={name}
+    data-price={discountedPrice}
 >
     <a href=`/product/${url}/${id}`>
         <Product id={id} productDetails={productDetails} renderImages={!group} />
@@ -47,6 +51,7 @@ const imageLen = images.filter(e=>e.catalogue).length
 </astro-catalogue-product>
 
 <script>
+import { zaraz }  from 'zaraz-ts'
 import type { IAddToBagResponse } from "@components/cart/interfaces";
 import { dispatchInternalEvent, formatPrice, httpRequestHeader, sessionLost, showErrorModal } from "@misc";
 import type { IProduct, IStockQuantity } from "./interfaces";
@@ -60,6 +65,9 @@ import { observer } from "./observer";
 
             const observe = !!(+this.dataset.obs)
             if (observe) observer.observe(this)
+
+            const productName = this.dataset.name
+            const discountedPrice = +this.dataset.price * 0.01
 
             const isDesktop = window.matchMedia && matchMedia("(pointer:fine)").matches;
             const id = this.dataset.id
@@ -142,6 +150,14 @@ import { observer } from "./observer";
                     qtyInCart = cartItemMap[id].quantity
                     updateAddToBagBtn()
                     setLoading(false)
+
+                    zaraz.ecommerce('Product Added',{
+                        product_id:id,
+                        name:productName,
+                        price: discountedPrice,
+                        currency:'gbp',
+                        quantity:1,
+                    })
                 } else if (!!currentCollectionPoint) {
                     const collectionPontOnQtyIncreaseCheckbox = document.getElementById("collection-point-on-qty-increase") as HTMLInputElement
                     const collectionPointNameElem = document.getElementById('current-collection-point-name') as HTMLSpanElement
