--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -145,6 +145,19 @@ const productSchema = isProductPage ? {
                 "maxValue": 3
               }
             },
+            "transitTime": {
+              "@type": "ShippingDeliveryTime",
+              "businessDays": {
+                "@type": "OpeningHoursSpecification",
+                "minValue": 2,
+                "maxValue": 3
+              }
+            },
+            "handlingTime": {
+              "@type": "QuantitativeValue",
+              "value": 1,
+              "unitCode": "DAY"
+            },
             "name": "Royal Mail Tracked 48",
             "freeShippingThreshold": {
               "@type": "MonetaryAmount",
@@ -170,6 +183,19 @@ const productSchema = isProductPage ? {
                 "minValue": 1,
                 "maxValue": 1
               }
+            },
+            "transitTime": {
+              "@type": "ShippingDeliveryTime",
+              "businessDays": {
+                "@type":"OpeningHoursSpecification", 
+                "minValue": 1, 
+                "maxValue": 1
+              }
+            },
+            "handlingTime": {
+              "@type":"QuantitativeValue", 
+              "value": 1, 
+              "unitCode": "DAY"
             },
             "name": "Royal Mail Tracked 24"
           }
