--- a/src/components/product-page/index.astro
+++ b/src/components/product-page/index.astro
@@ -360,16 +360,21 @@ import { selectedCollectionPoint, otherClientPaymentInProcess, shopNameMap } fro
                 resizeTimeout = setTimeout(resizeEverything, 200);
             }
 
+            // const zarazProductViewed = () => {
+            //     zaraz.ecommerce('Product Viewed',{
+            //         product_id:id,
+            //         name:productName,
+            //         price: discountedPrice,
+            //         currency:'gbp',
+            //         value: discountedPrice
+            //     })
+            // }
+
             const onLoad = () => {
                 updateAddToBagQty()
                 resizeEverything()
-                zaraz.ecommerce('Product Viewed',{
-                    product_id:id,
-                    name:productName,
-                    price: discountedPrice,
-                    currency:'gbp',
-                    value: discountedPrice
-                })
+                console.log(zaraz)
+                console.log(!!zaraz)
             }
 
             window.addEventListener('online',onOnline,true)
