--- a/src/components/product-page/index.astro
+++ b/src/components/product-page/index.astro
@@ -362,18 +362,10 @@ import { selectedCollectionPoint, otherClientPaymentInProcess, shopNameMap } fro
 
             const zarazProductViewed = async () => {
                 try {
-                    // await zaraz.ecommerce('Product Viewed',{
-                    //     product_id:id,
-                    //     name:productName,
-                    //     price: discountedPrice,
-                    //     currency:'gbp',
-                    //     value: discountedPrice
-                    // })
-                    await zaraz.track('ProductViewed',{
+                    await zaraz.track('ViewContent',{
                         content_ids: [id],
                         content_type: 'product',
                     })
-                    console.log('Zaraz ecommerce event called successfully')
                 } catch (e){
                     console.error('Zaraz ecommerce event failed to be called: ',e)
                 }
@@ -382,7 +374,6 @@ import { selectedCollectionPoint, otherClientPaymentInProcess, shopNameMap } fro
             const onLoad = () => {
                 updateAddToBagQty()
                 resizeEverything()
-                // setTimeout(zarazProductViewed,1000)
                 zarazProductViewed()
             }
 
