--- a/src/components/catalogue-item/index.astro
+++ b/src/components/catalogue-item/index.astro
@@ -151,12 +151,17 @@ import { observer } from "./observer";
                     updateAddToBagBtn()
                     setLoading(false)
 
-                    zaraz.ecommerce('Product Added',{
-                        product_id:id,
-                        name:productName,
-                        price: discountedPrice,
-                        currency:'gbp',
-                        quantity:1,
+                    // zaraz.ecommerce('Product Added',{
+                    //     product_id:id,
+                    //     name:productName,
+                    //     price: discountedPrice,
+                    //     currency:'gbp',
+                    //     quantity:1,
+                    // })
+
+                    zaraz.track('AddToCart',{
+                        content_ids: [id],
+                        content_type: 'product',
                     })
                 } else if (!!currentCollectionPoint) {
                     const collectionPontOnQtyIncreaseCheckbox = document.getElementById("collection-point-on-qty-increase") as HTMLInputElement
