--- a/src/components/product-page/index.astro
+++ b/src/components/product-page/index.astro
@@ -242,17 +242,22 @@ import { selectedCollectionPoint, otherClientPaymentInProcess, shopNameMap } fro
                     dispatchInternalEvent(ADD_TO_BAG_FROM_CATALOGUE,apiResponse)
                     qtyInCart = apiResponse.cartItemMap[id].quantity
 
-                    zaraz.ecommerce('Product Added',{
-                        product_id:id,
-                        name:productName,
-                        price: discountedPrice,
-                        currency:'gbp',
-                        quantity:addQty,
-                    })
+                    // zaraz.ecommerce('Product Added',{
+                    //     product_id:id,
+                    //     name:productName,
+                    //     price: discountedPrice,
+                    //     currency:'gbp',
+                    //     quantity:addQty,
+                    // })
 
                     addQty = 1
                     updateAddToBagQty()
                     setLoading(false)
+
+                    zaraz.track('AddToCart',{
+                        content_ids: [id],
+                        content_type: 'product',
+                    })
                 } else if (!!currentCollectionPoint){
                     const collectionPontOnQtyIncreaseCheckbox = document.getElementById("collection-point-on-qty-increase") as HTMLInputElement
                     const collectionPointNameElem = document.getElementById('current-collection-point-name') as HTMLSpanElement
