--- a/src/components/catalogue-item/index.astro
+++ b/src/components/catalogue-item/index.astro
@@ -151,15 +151,7 @@ import { observer } from "./observer";
                     updateAddToBagBtn()
                     setLoading(false)
 
-                    // zaraz.ecommerce('Product Added',{
-                    //     product_id:id,
-                    //     name:productName,
-                    //     price: discountedPrice,
-                    //     currency:'gbp',
-                    //     quantity:1,
-                    // })
-
-                    zaraz.track('AddToCart',{
+                    await zaraz.track('AddToCart',{
                         content_ids: [id],
                         content_type: 'product',
                     })
