--- a/src/components/product-page/index.astro
+++ b/src/components/product-page/index.astro
@@ -242,19 +242,11 @@ import { selectedCollectionPoint, otherClientPaymentInProcess, shopNameMap } fro
                     dispatchInternalEvent(ADD_TO_BAG_FROM_CATALOGUE,apiResponse)
                     qtyInCart = apiResponse.cartItemMap[id].quantity
 
-                    // zaraz.ecommerce('Product Added',{
-                    //     product_id:id,
-                    //     name:productName,
-                    //     price: discountedPrice,
-                    //     currency:'gbp',
-                    //     quantity:addQty,
-                    // })
-
                     addQty = 1
                     updateAddToBagQty()
                     setLoading(false)
 
-                    zaraz.track('AddToCart',{
+                    await zaraz.track('AddToCart',{
                         content_ids: [id],
                         content_type: 'product',
                     })
