--- a/src/components/catalogue-item/index.astro
+++ b/src/components/catalogue-item/index.astro
@@ -155,6 +155,13 @@ import { observer } from "./observer";
                         content_ids: [id],
                         content_type: 'product',
                     })
+                    await zaraz.track('addtocart',{
+                        line_items: [
+                            {
+                                product_id: id,
+                            }
+                        ]
+                    })
                 } else if (!!currentCollectionPoint) {
                     const collectionPontOnQtyIncreaseCheckbox = document.getElementById("collection-point-on-qty-increase") as HTMLInputElement
                     const collectionPointNameElem = document.getElementById('current-collection-point-name') as HTMLSpanElement
